# abab-healthy-agent

./: .env.example  .env.http-qa.example  .env.production.example  .gitignore  AGENTS.md  CODEX_IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.http-qa.yml  docker-compose.prod.yml  start_mobile_qa_debug.cmd  stop_mobile_qa_debug.cmd  待审核代码文件列表.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b2c3d4e5f60_add_agent_memory_tables.py  202607030114_initial_empty.py  278ab15ff9ab_add_family_permission_tables.py  2c3d4e5f6a70_unify_agent_memory_storage.py  3d4e5f6a7b80_add_agent_conversation_tasks.py  97c8ad8504bb_add_medical_document_report_alert_tables.py  ae420c0ea01f_add_agent_audit_tables.py  c4d4c2b2ef2e_add_identity_tables.py  d6cf10a352c9_add_health_core_tables.py  f0f1a2b3c4d5_add_alert_create_permission.py
backend/app/: main.py
backend/app/agent/: answer_composer.py  enums.py  exceptions.py  llm_client.py  models.py  persona.py  planner.py  repository.py  runtime.py  safety.py  service.py  tool_executor.py  tool_registry.py
backend/app/api/: access_control.py  deps.py  errors.py  health.py  router.py  sanitizers.py  validators.py
backend/app/core/: config.py  environment.py  exceptions.py  logging.py
backend/app/db/: base.py  init_db.py  mixins.py  session.py  transaction.py
backend/app/jobs/: alert_check_job.py  cleanup_job.py  daily_report_job.py  device_sync_job.py  document_processing_job.py  (+3 more)
backend/scripts/: seed_demo_data.py  verify_demo_data.py
(+643 files in other folders)
