[project]
name = "family-health-agent-backend"
version = "0.1.0"
description = "Minimal backend scaffold for Family Health Agent."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.10.0",
    "SQLAlchemy>=2.0.0",
    "uvicorn[standard]>=0.35.0",
]
