# 文件职责：业务代码文件，家庭健康 Agent 通用模块。
# 设计说明：承载本模块的一部分领域能力或工程能力。 承载项目中暂未细分到具体领域的通用能力。

[project]
name = "family-health-agent-backend"
version = "0.1.0"
description = "Minimal backend scaffold for Family Health Agent."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.10.0",
    "SQLAlchemy>=2.0.0",
    "uvicorn[standard]>=0.35.0",
]
